fixed mobile flags overflow on smaller sreens

--- a/public/css/translation-component.css
+++ b/public/css/translation-component.css
@@ -172,7 +172,7 @@
 	}
 
 	.ftlabs-translation__language-selection-element {
-		margin-right: 10px;
+		margin-right: -4px;
 	}
 
 	.topper--opinion > .topper__content > .topper__headline > :nth-child(2) {
